tests/testdata/errors/continue_outside_loop.pine
// Test continue outside loop - should fail

var x = 10
continue

// Expected error: Continue statement outside of loop
